--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "my-board",
+  "name": "retrboard",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o",
+    "start": "node server.js",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "start:server": "nodemon server.js"
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -26,14 +26,14 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
+    "firebase": "^9.4.0",
     "mongoose": "^6.0.13",
     "mongoose-unique-validator": "^3.0.0",
     "nodemon": "^2.0.15",
+    "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "firebase": "^9.4.0",
-    "rxfire": "^6.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.3",
